--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           script_stop: true
           script: |
             cd dev
-            ./deploy-frontend.sh
+#            ./deploy-frontend.sh
 
