--- a/.github/workflows/feature-deploy.yaml
+++ b/.github/workflows/feature-deploy.yaml
@@ -14,11 +14,11 @@ jobs:
       - name: Connecting to remote dev
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SSH_DEV_SERVER_HOST }}
-          username: ${{ secrets.SSH_DEV_USER }}
-          passphrase: ${{ secrets.SSH_DEV_PASS }}
-          key: ${{ secrets.SSH_DEV_SERVER_PKEY }}
-          port: ${{ secrets.SSH_DEV_SERVER_PORT }}
+          host: ${{ secrets.SSH_SERVER_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          passphrase: ${{ secrets.SSH_PASS }}
+          key: ${{ secrets.SSH_SERVER_PKEY }}
+          port: ${{ secrets.SSH_SERVER_PORT }}
           script_stop: true
           script: |
             cd dev
